Retarget to netstandard2.0

--- a/TentacleSoftware.TeamSpeakQuery/TentacleSoftware.TeamSpeakQuery.csproj
+++ b/TentacleSoftware.TeamSpeakQuery/TentacleSoftware.TeamSpeakQuery.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
-    <Version>2.0.0-rc2</Version>
+    <Version>2.0.0-rc3</Version>
     <Description>A task-based event-driven Team Speak 3 ServerQuery client that supports SOCKS4 proxies.</Description>
     <Copyright>Copyright © 2018 Sam Wood</Copyright>
     <Company />
@@ -19,6 +19,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="TentacleSoftware.Telnet" Version="2.0.0-rc2" />
+    <PackageReference Include="TentacleSoftware.Telnet" Version="2.0.0-rc3" />
   </ItemGroup>
 </Project>
